tests/ex4/fail201.java
// PA2 pass stmt
class Main {
    public static void main(String[] args){
        System.out.println(42);
    }
}

class A{
    A p(){
        while (true) {}
        return null;
    }
}
